Models created along with Services and Controllers